--- a/MyPresenter/MyPresenter.csproj
+++ b/MyPresenter/MyPresenter.csproj
@@ -38,6 +38,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -60,6 +61,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,16 +80,27 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="EditSlide.xaml.cs">
+      <DependentUpon>EditSlide.xaml</DependentUpon>
+    </Compile>
     <Compile Include="JsonHelper.cs" />
+    <Compile Include="NewSong.xaml.cs">
+      <DependentUpon>NewSong.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="RemoteControl.cs" />
+    <Compile Include="Serializer.cs" />
+    <Compile Include="ServiceItem.cs" />
+    <Compile Include="song.cs" />
     <Compile Include="openlyricSong.cs" />
     <Compile Include="pco.cs" />
     <Compile Include="pcoItems.cs" />
     <Compile Include="pcoPlan.cs" />
     <Compile Include="pcoPlans.cs" />
-    <Compile Include="spotify.cs" />
-    <Compile Include="Window1.xaml.cs">
-      <DependentUpon>Window1.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="songParser.cs" />
+    <Page Include="EditSlide.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="LiveOutputWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -107,7 +120,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Window1.xaml">
+    <Page Include="NewSong.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -166,7 +179,25 @@
     <Resource Include="AudioMuteOff.png" />
     <Resource Include="AudioMuteOn.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="slideEdit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="slideAdd.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="slideDelete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="RemoteControlPage.htm">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
